# saas-configurator

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  example_usage.py  pyproject.toml  run.py
back-end/: Dockerfile  README.md  demo.py  pyproject.toml  test_api.py
back-end/app/: database.py  main.py  models.py  question_mapping.md  re_client.py
back-end/luego-config-service/: README.md  pom.xml
back-end/luego-config-service/artefacts/: openapi-spec.yaml  run-apis-on-docker.bash
back-end/luego-config-service/artefacts/domains/Configuration/cluster-config-demo/: 1.0.0-info.yaml
back-end/luego-config-service/artefacts/domains/Configuration/cluster-config-demo/1.0.0/: build_info.yaml  openapi-spec.yaml
back-end/luego-config-service/src/main/java/runners/: ExploratoryTestRunner.java  MyScenarioRunner.java
back-end/luego-config-service/src/main/luego/: luego.application.yaml
back-end/luego-config-service/src/main/luego/demo/config/: ZZZinferBasicCluster.fun.yaml  ZZZinferDedicatedCluster.fun.yaml  ZZZinferEnterpriseCluster.fun.yaml  ZZZinferFreightCluster.fun.yaml  ZZZinferKafkaCluster.fun.yaml  ZZZinferStandardCluster.fun.yaml  configureBasicCluster.fun.yaml  configureDedicatedCluster.fun.yaml  configureEnterpriseCluster.fun.yaml  configureFreightCluster.fun.yaml  (+9 more)
back-end/luego-config-service/src/main/scala/build_and_run/: Main.scala
back-end/tests/: conftest.py
back-end/tests/it/: resp.json  test_api.py  test_with_re.py
back-end/tests/it/interactive_test/: interactive_test.py
back-end/tests/ut/: test_config_flow.py  test_re_client.py
(+98 files in other folders)
